Add LinzProvider and update data catalog for multi-city support